<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tech Proficiency Exercise</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Empty</string>
    <string name="button_send">Submit</string>
    <string name="title_activity_display_message">My Message</string>

    <!-- Main Menu strings -->
    <string name="user_info">Maintenance</string>
    <string name="settings">Settings</string>
    <string name="syncData">Sync Data</string>
    <string name="title">MechanIT</string>
    <string name="car_name">Car Name</string>


    <!-- New car form strings -->
    <string name="car_nickname">Nickname:</string>
    <string name="car_make">Make:</string>
    <string name="car_model">Model:</string>
    <string name="car_year">Year:</string>
    <string name="car_mileage">Mileage:</string>
    <string name="title_activity_view_user_info">Maintenance</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edit_settings">Settings</string>
    <string name="save_settings">User information has been saved.</string>
    <string name="save_letters_only">Please only use letters.</string>
    <string name="save_numbers_only">Please only use numbers.</string>
    <string name="title_activity_sync_data">Sync Data</string>

    <!-- Sync Data strings -->
    <string name="successText">Data Synchronization Successful</string>
    <string name="failureText">Data Synchronization Unsuccessful</string>
    <string name="noBluetoothText">This phone does not support Bluetooth.</string>
    <string name="sync_textView">Sync Result:</string>
    <string name="discoverable">Make Discoverable</string>

    <!-- Nav Drawer strings -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Maintenance</item>
        <item>Trip Data</item>
        <item>Settings</item>
        <item>Notes</item>

    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reset_values">Reset Values</string>
    <string name="title_activity_trip_data">Trip Data</string>
    <string name="title_activity_notes">Notes</string>
    <string name="title_activity_new_note">Notes</string>

</resources>
