<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:id="@+id/view_nickname_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/view_nickname_textView"
            android:text="@string/car_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/view_nickname"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/view_make_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_nickname_layout">

        <TextView
            android:id="@+id/view_make_textView"
            android:text="@string/car_make"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/view_make"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_model_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_make_layout">

        <TextView
            android:id="@+id/view_model_textView"
            android:text="@string/car_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/view_model"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_year_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_model_layout">



        <TextView
            android:id="@+id/view_year_textView"
            android:text="@string/car_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/view_year"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_mileage_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_year_layout">



        <TextView
            android:id="@+id/view_mileage_textView"
            android:text="@string/car_mileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/view_mileage"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

    </LinearLayout>

</RelativeLayout>