<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/userInfo"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/user_info"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/car_name"
        android:onClick="viewUserInfo"/>

    <Button
        android:id="@+id/settings"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/userInfo"
        android:onClick="editSettings"/>

    <Button
        android:id="@+id/syncData"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/syncData"
        android:onClick="syncData"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/settings"
         />
    <TextView
        android:id="@+id/title"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:textColor="#000"
        android:layout_marginTop="1dp"
        android:text="MechanIT"

        />
    <TextView
        android:id="@+id/car_name"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text=""
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/title"/>

</RelativeLayout>
