<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FC7A1B"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:id="@+id/car_nickname_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/car_nickname_textView"
            android:text="@string/car_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edit_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/car_make_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_nickname_layout">

        <TextView
            android:id="@+id/car_make_textView"
            android:text="@string/car_make"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edit_make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/car_model_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_make_layout">

        <TextView
            android:id="@+id/car_model_textView"
            android:text="@string/car_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edit_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/car_year_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_model_layout">

        <TextView
            android:id="@+id/car_year_textView"
            android:text="@string/car_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edit_year"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/car_mileage_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_year_layout">

        <TextView
            android:id="@+id/car_mileage_textView"
            android:text="@string/car_mileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edit_mileage"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rotation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_mileage_layout">

        <TextView
            android:id="@+id/rotation_textView"
            android:text="Miles since last tire rotation: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edit_rotation"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tire_para_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rotation_layout">

        <TextView
            android:id="@+id/tire_para_textView"
            android:text="Miles since tires replaced: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edit_tire_para"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message"
            android:text="" />
    </LinearLayout>

    <LinearLayout
    android:id="@+id/oil_para_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/tire_para_layout">

    <TextView
        android:id="@+id/oil_para_textView"
        android:text="Miles since last oil change:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_oil_para"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
        android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/spark_para_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/oil_para_layout">

        <TextView
            android:id="@+id/spark_para_textView"
            android:text="Miles since spark plugs replaced:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edit_spark_para"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rotation_change_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spark_para_layout">

        <TextView
            android:id="@+id/rotation_change_textView"
            android:text="Miles per tire rotation: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edit_rotation_change"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tire_change_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rotation_change_layout">

        <TextView
            android:id="@+id/tire_change_textView"
            android:text="Miles per tire change: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edit_tire_change"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/oil_change_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tire_change_layout">

        <TextView
            android:id="@+id/oil_change_textView"
            android:text="Miles per oil change: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edit_oil_change"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/spark_change_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/oil_change_layout">

        <TextView
            android:id="@+id/spark_change_textView"
            android:text="Miles per spark plug replacement: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edit_spark_change"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message"
            android:text="" />
    </LinearLayout>

    <Button
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:layout_below="@id/spark_change_layout"
        android:background="@drawable/savebutton"/>
</RelativeLayout>
</ScrollView>
    <!-- Side navigation drawer UI -->
    <ListView
        android:id="@+id/navList4"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"/>
</android.support.v4.widget.DrawerLayout>